exports[`국내증시 > 국내증시 MAP > LIVE 뉴스가 일정시간마다 변경되고, 클릭하면 뉴스페이지로 이동한다. #0`] =
{
  "Article": {
    "currentPrice": "number",
    "financeCategory": "string",
    "id": "string",
    "name": "string",
    "rateOfChange": "number",
    "updateDateTime": "string"
  },
  "CalendarItem": {
    "classification": "string",
    "conspiracy": "null | string",
    "currentPrice": "number | null",
    "dividend": "null",
    "dividendDateTime": "null",
    "estimatedNetProfitPerShare": "null",
    "estimatedSales": "null",
    "eventContent": "null | string",
    "eventTitle": "null | string",
    "id": "number",
    "ipoStatus": "null | string",
    "listingDateTime": "null | string",
    "market": "null | string",
    "organizer": "null | string",
    "payDay": "null",
    "personalSubscriptionCompetitionRate": "null | string",
    "personalSubscriptionEndDateTime": "null | string",
    "personalSubscriptionStartedDateTime": "null | string",
    "rateOfChange": "number | null",
    "rateReturn": "null",
    "registerDateTime": "string",
    "stockCode": "null | string",
    "stockName": "string"
  },
  "HotIndustryItem": {
    "id": "number",
    "mainStockItem": "MainStockItem",
    "name": "string",
    "rateOfChange": "number"
  },
  "InvestmentCalendarItem": {
    "calendarItems": "CalendarItem[]",
    "dayOfWeekday": "string",
    "exposureDateTime": "string"
  },
  "InvestmentCalendarNew": {
    "id": "string",
    "landingUrl": "string",
    "leadText": "string",
    "mediaName": "string",
    "registerDateTime": "string",
    "thumbnail": "string",
    "title": "string"
  },
  "LiveNew": {
    "id": "string",
    "title": "string"
  },
  "MainIndexItem": {
    "currentPrice": "number",
    "financeCategory": "string",
    "foreignerNetSalesValue": "number",
    "id": "number",
    "individualNetSalesValue": "number",
    "institutionNetSalesValue": "number",
    "name": "string",
    "prevClosingPrice": "number",
    "priceChange": "number",
    "rateOfChange": "number",
    "symbol": "string",
    "updateDateTime": "string"
  },
  "MainStockItem": {
    "financeCategory": "string",
    "id": "string",
    "name": "string",
    "price": "number",
    "priceChange": "number",
    "rateOfChange": "number",
    "updateDateTime": "string"
  },
  "MainStockNewsItem": {
    "enabled": "boolean",
    "financeCategory": "string",
    "id": "string",
    "keywords": "null",
    "landingUrl": "string",
    "leadText": "string",
    "mediaName": "string",
    "registerDateTime": "string",
    "subCategory": "string",
    "thumbnail": "string",
    "title": "string"
  },
  "RealtimeNews": {
    "items": "InvestmentCalendarNew[]",
    "totalCount": "number"
  },
  "Report": {
    "articleId": "string",
    "articleTitle": "string",
    "financeCategory": "string",
    "id": "string",
    "name": "string",
    "price": "number",
    "priceChange": "number",
    "rateOfChange": "number",
    "updateDateTime": "string"
  },
  "TodayHotPick": {
    "fall": "MainStockItem[]",
    "new": "MainStockItem[]",
    "report": "Report[]",
    "soaring": "Report[]"
  },
  "TodayPopular": {
    "article": "Article[]",
    "discussion": "Article[]",
    "search": "Article[]",
    "star": "Article[]"
  },
  "TopLevel": {
    "hotIndustryItems": "HotIndustryItem[]",
    "investmentCalendarItems": "InvestmentCalendarItem[]",
    "investmentCalendarNews": "InvestmentCalendarNew[]",
    "liveNews": "LiveNew[]",
    "mainIndexItems": "MainIndexItem[]",
    "mainStockNewsItems": "MainStockNewsItem[]",
    "realtimeNews": "RealtimeNews",
    "realtimeNewsCategories": "string[]",
    "todayHotPick": "TodayHotPick",
    "todayPopular": "TodayPopular"
  }
};

exports[`카테고리별 랭킹 > 카테고리별 체크된 기본항목이 다르며, 직접 항목을 체크하고 적용하기, 초기화하여 표시되는 정보를 다르게 할 수 있다. #0`] =
{
  "Kos": {
    "bps": "number",
    "currentPrice": "number",
    "eps": "number",
    "financeCategory": "string",
    "foreignerShareRatio": "number",
    "highPrice": "number",
    "id": "string",
    "lowPrice": "number",
    "marketCap": "number",
    "monthlyRateOfChange": "number",
    "name": "string",
    "netIncome": "number | null",
    "newListedCount": "number",
    "newListedRateOfChange": "null",
    "openPrice": "number",
    "operatingProfit": "number | null",
    "per": "number | null",
    "preTradeVolume": "number",
    "priceChange": "number",
    "rateOfChange": "number",
    "take": "number | null",
    "threeMonthlyRateOfChange": "number",
    "threeYearlyRateOfChange": "number",
    "totalAssets": "number | null",
    "totalDebt": "number | null",
    "tradeValue": "number",
    "tradeVolume": "number",
    "updateDateTime": "string",
    "yearlyRateOfChange": "number"
  },
  "TopLevel": {
    "kosdaq": "Kos[]",
    "kospi": "Kos[]"
  }
};

exports[`해외증시 > 해외 대표 종목 > 기간 버튼을 눌러 차트를 바꾸고 리스트를 클릭하여 뉴스를 바꿀 수 있다. #0`] =
{
  "DebateItem": {
    "agreeCount": "number",
    "agreePercent": "number",
    "articles": "null",
    "content": "string",
    "createdDateTime": "string",
    "disagreeCount": "number",
    "disagreePercent": "number",
    "endedDateTime": "string",
    "firstOpinion": "string",
    "id": "number",
    "numberOfParticipants": "number",
    "popularityEnabledDateTime": "string",
    "secondOpinion": "string",
    "startedDateTime": "string",
    "theme": "string",
    "title": "string"
  },
  "Dow": {
    "articleId": "null | string",
    "articleTitle": "null | string",
    "stockCode": "string",
    "stockName": "string"
  },
  "LiveNew": {
    "id": "string",
    "title": "string"
  },
  "MainNews": {
    "dow": "Dow[]",
    "nasdaq": "Dow[]"
  },
  "OfMainIndex": {
    "currentPrice": "number",
    "financeCategory": "string",
    "id": "string",
    "name": "string",
    "priceChange": "number",
    "rateOfChange": "number",
    "updateDateTime": "string",
    "yearlyBottom": "number",
    "yearlyTop": "number"
  },
  "RealTimeNews": {
    "items": "RepresentativeNew[]",
    "totalCount": "number"
  },
  "RecentInvestmentContent": {
    "authorId": "number",
    "authorName": "string",
    "authorThumbnailUrl": "string",
    "isOriginal": "boolean",
    "leadText": "string",
    "postId": "number",
    "subCategory": "string",
    "title": "string",
    "writeDateTime": "string"
  },
  "RepresentativeNew": {
    "id": "string",
    "landingUrl": "null | string",
    "leadText": "string",
    "mediaName": "string",
    "registerDateTime": "string",
    "thumbnail": "null | string",
    "title": "string"
  },
  "RepresentativeStock": {
    "article": "RepresentativeNew",
    "stock": "Stock"
  },
  "Stock": {
    "currentPrice": "number",
    "financeCategory": "string",
    "highPrice": "number",
    "id": "string",
    "lowPrice": "number",
    "name": "string",
    "preClosingPrice": "number",
    "priceChange": "number",
    "rateOfChange": "number",
    "symbol": "string",
    "updateDateTime": "string"
  },
  "TopLevel": {
    "countryIndexOfMainIndex": "OfMainIndex[]",
    "debateItems": "DebateItem[]",
    "indicatorOfMainIndex": "OfMainIndex[]",
    "liveNews": "LiveNew[]",
    "mainNews": "MainNews",
    "realTimeNews": "RealTimeNews",
    "recentInvestmentContents": "RecentInvestmentContent[]",
    "representativeNews": "RepresentativeNew[]",
    "representativeStock": "RepresentativeStock[]"
  }
};

exports[`zum 투자 홈 > 오늘의 주요뉴스 > 주요뉴스 카드를 클릭하여 투자뉴스 읽기 페이지로 이동할 수 있고 하트를 눌러 좋아요 표시 할 수 있다. #0`] =
{
  "AlternativeInvestmentElement": {
    "authorId": "number",
    "authorName": "string",
    "authorThumbnailUrl": "string",
    "isOriginal": "boolean",
    "leadText": "string",
    "postId": "number",
    "subCategory": "string",
    "title": "string",
    "writeDateTime": "string"
  },
  "CategoryNews": {
    "all": "DomesticElement[]",
    "coin": "DomesticElement[]",
    "domestic": "DomesticElement[]",
    "esg": "DomesticElement[]",
    "market": "DomesticElement[]",
    "overseas": "DomesticElement[]"
  },
  "DomesticElement": {
    "category": "null | string",
    "id": "string",
    "landingUrl": "string",
    "mediaName": "null | string",
    "registerDateTime": "null | string",
    "subCategory": "null | string",
    "thumbnail": "string",
    "title": "string"
  },
  "InvestmentContentsNotice": {
    "postId": "number",
    "title": "string",
    "writeDateTime": "string"
  },
  "MainIndicator": {
    "items": "MainIndicatorItem[]"
  },
  "MainIndicatorItem": {
    "category": "string",
    "currentPrice": "number",
    "id": "string",
    "name": "string",
    "priceChange": "number",
    "rateOfChange": "number",
    "unit": "string"
  },
  "MainNews": {
    "subCategories": "string[]",
    "subNewsItems": "DomesticElement[]",
    "templateCategories": "string[]",
    "templatedNews": "TemplatedNews"
  },
  "News": {
    "items": "DomesticElement[]"
  },
  "Notices": {
    "investmentContentsNotices": "InvestmentContentsNotice[]",
    "performanceSummaryNotices": "PerformanceSummaryNotice[]"
  },
  "PerformanceSummaryNotice": {
    "disclosureDateTime": "string",
    "stockCode": "string",
    "stockName": "string",
    "title": "string"
  },
  "RealtimeComments": {
    "items": "RealtimeCommentsItem[]"
  },
  "RealtimeCommentsItem": {
    "channelName": "string",
    "content": "string",
    "createDateTime": "string",
    "key": "string",
    "stockCode": "string",
    "stockIcon": "string",
    "stockName": "string",
    "title": "string"
  },
  "RecentInvestmentContents": {
    "all": "AlternativeInvestmentElement[]",
    "alternativeInvestment": "AlternativeInvestmentElement[]",
    "coin": "AlternativeInvestmentElement[]",
    "domesticStock": "AlternativeInvestmentElement[]",
    "investmentTrend": "AlternativeInvestmentElement[]",
    "overseasStock": "AlternativeInvestmentElement[]"
  },
  "TemplatedNews": {
    "items": "DomesticElement[]",
    "templates": "string[]"
  },
  "TopLevel": {
    "categoryNews": "CategoryNews",
    "mainIndicator": "MainIndicator",
    "mainNews": "MainNews",
    "mostReadNews": "News",
    "notices": "Notices",
    "realtimeComments": "RealtimeComments",
    "recentInvestmentContents": "RecentInvestmentContents",
    "todayMarketNews": "News",
    "videos": "Videos"
  },
  "Videos": {
    "invenId": "string",
    "items": "VideosItem[]"
  },
  "VideosItem": {
    "body": "string",
    "categoryCode": "string",
    "cpCode": "string",
    "cpName": "string",
    "createDateTime": "string",
    "enabled": "boolean",
    "episode": "number",
    "id": "string",
    "playTime": "number",
    "publishDateTime": "string",
    "sectionCode": "string",
    "targetAge": "number",
    "targetNation": "string",
    "title": "string",
    "updateDateTime": "string",
    "vodImage": "string"
  }
};

exports[`zum 투자 홈 > 분야별 실시간 뉴스 > 스크롤을 내리면 다음 페이지를 불러온다. #0`] =
{
  "Item": {
    "category": "string",
    "id": "string",
    "landingUrl": "string",
    "leadText": "string",
    "mediaName": "string",
    "registerDateTime": "string",
    "subCategory": "string",
    "thumbnail": "string",
    "title": "string"
  },
  "TopLevel": {
    "items": "Item[]",
    "totalCount": "number"
  }
};

exports[`국내증시 > 국내증시 MAP > LIVE 뉴스가 일정시간마다 변경되고, 클릭하면 뉴스페이지로 이동한다. #1`] =
{
  "Article": {
    "currentPrice": "number",
    "financeCategory": "string",
    "id": "string",
    "name": "string",
    "rateOfChange": "number",
    "updateDateTime": "string"
  },
  "CalendarItem": {
    "classification": "string",
    "conspiracy": "null | string",
    "currentPrice": "number | null",
    "dividend": "null",
    "dividendDateTime": "null",
    "estimatedNetProfitPerShare": "null",
    "estimatedSales": "null",
    "eventContent": "null | string",
    "eventTitle": "null | string",
    "id": "number",
    "ipoStatus": "null | string",
    "listingDateTime": "null | string",
    "market": "null | string",
    "organizer": "null | string",
    "payDay": "null",
    "personalSubscriptionCompetitionRate": "null | string",
    "personalSubscriptionEndDateTime": "null | string",
    "personalSubscriptionStartedDateTime": "null | string",
    "rateOfChange": "number | null",
    "rateReturn": "null",
    "registerDateTime": "string",
    "stockCode": "null | string",
    "stockName": "string"
  },
  "HotIndustryItem": {
    "id": "number",
    "mainStockItem": "MainStockItem",
    "name": "string",
    "rateOfChange": "number"
  },
  "InvestmentCalendarItem": {
    "calendarItems": "CalendarItem[]",
    "dayOfWeekday": "string",
    "exposureDateTime": "string"
  },
  "InvestmentCalendarNew": {
    "id": "string",
    "landingUrl": "string",
    "leadText": "string",
    "mediaName": "string",
    "registerDateTime": "string",
    "thumbnail": "null | string",
    "title": "string"
  },
  "LiveNew": {
    "id": "string",
    "title": "string"
  },
  "MainIndexItem": {
    "currentPrice": "number",
    "financeCategory": "string",
    "foreignerNetSalesValue": "number",
    "id": "number",
    "individualNetSalesValue": "number",
    "institutionNetSalesValue": "number",
    "name": "string",
    "prevClosingPrice": "number",
    "priceChange": "number",
    "rateOfChange": "number",
    "symbol": "string",
    "updateDateTime": "string"
  },
  "MainStockItem": {
    "financeCategory": "string",
    "id": "string",
    "name": "string",
    "price": "number",
    "priceChange": "number",
    "rateOfChange": "number",
    "updateDateTime": "string"
  },
  "MainStockNewsItem": {
    "enabled": "boolean",
    "financeCategory": "string",
    "id": "string",
    "keywords": "null",
    "landingUrl": "string",
    "leadText": "string",
    "mediaName": "string",
    "registerDateTime": "string",
    "subCategory": "string",
    "thumbnail": "string",
    "title": "string"
  },
  "RealtimeNews": {
    "items": "InvestmentCalendarNew[]",
    "totalCount": "number"
  },
  "Report": {
    "articleId": "string",
    "articleTitle": "string",
    "financeCategory": "string",
    "id": "string",
    "name": "string",
    "price": "number",
    "priceChange": "number",
    "rateOfChange": "number",
    "updateDateTime": "string"
  },
  "TodayHotPick": {
    "fall": "MainStockItem[]",
    "new": "MainStockItem[]",
    "report": "Report[]",
    "soaring": "Report[]"
  },
  "TodayPopular": {
    "article": "Article[]",
    "discussion": "Article[]",
    "search": "Article[]",
    "star": "Article[]"
  },
  "TopLevel": {
    "hotIndustryItems": "HotIndustryItem[]",
    "investmentCalendarItems": "InvestmentCalendarItem[]",
    "investmentCalendarNews": "InvestmentCalendarNew[]",
    "liveNews": "LiveNew[]",
    "mainIndexItems": "MainIndexItem[]",
    "mainStockNewsItems": "MainStockNewsItem[]",
    "realtimeNews": "RealtimeNews",
    "realtimeNewsCategories": "string[]",
    "todayHotPick": "TodayHotPick",
    "todayPopular": "TodayPopular"
  }
};

exports[`zum 투자 홈 > 오늘의 주요뉴스 > 주요뉴스 카드를 클릭하여 투자뉴스 읽기 페이지로 이동할 수 있고 하트를 눌러 좋아요 표시 할 수 있다. #1`] =
{
  "AlternativeInvestmentElement": {
    "authorId": "number",
    "authorName": "string",
    "authorThumbnailUrl": "string",
    "isOriginal": "boolean",
    "leadText": "string",
    "postId": "number",
    "subCategory": "string",
    "title": "string",
    "writeDateTime": "string"
  },
  "CategoryNews": {
    "all": "DomesticElement[]",
    "coin": "DomesticElement[]",
    "domestic": "DomesticElement[]",
    "esg": "DomesticElement[]",
    "market": "DomesticElement[]",
    "overseas": "DomesticElement[]"
  },
  "DomesticElement": {
    "category": "null | string",
    "id": "string",
    "landingUrl": "string",
    "mediaName": "null | string",
    "registerDateTime": "null | string",
    "subCategory": "null | string",
    "thumbnail": "null | string",
    "title": "string"
  },
  "InvestmentContentsNotice": {
    "postId": "number",
    "title": "string",
    "writeDateTime": "string"
  },
  "MainIndicator": {
    "items": "MainIndicatorItem[]"
  },
  "MainIndicatorItem": {
    "category": "string",
    "currentPrice": "number",
    "id": "string",
    "name": "string",
    "priceChange": "number",
    "rateOfChange": "number",
    "unit": "string"
  },
  "MainNews": {
    "subCategories": "string[]",
    "subNewsItems": "DomesticElement[]",
    "templateCategories": "string[]",
    "templatedNews": "TemplatedNews"
  },
  "News": {
    "items": "DomesticElement[]"
  },
  "Notices": {
    "investmentContentsNotices": "InvestmentContentsNotice[]",
    "performanceSummaryNotices": "PerformanceSummaryNotice[]"
  },
  "PerformanceSummaryNotice": {
    "disclosureDateTime": "string",
    "stockCode": "string",
    "stockName": "string",
    "title": "string"
  },
  "RealtimeComments": {
    "items": "RealtimeCommentsItem[]"
  },
  "RealtimeCommentsItem": {
    "channelName": "string",
    "content": "string",
    "createDateTime": "string",
    "key": "string",
    "stockCode": "string",
    "stockIcon": "string",
    "stockName": "string",
    "title": "string"
  },
  "RecentInvestmentContents": {
    "all": "AlternativeInvestmentElement[]",
    "alternativeInvestment": "AlternativeInvestmentElement[]",
    "coin": "AlternativeInvestmentElement[]",
    "domesticStock": "AlternativeInvestmentElement[]",
    "investmentTrend": "AlternativeInvestmentElement[]",
    "overseasStock": "AlternativeInvestmentElement[]"
  },
  "TemplatedNews": {
    "items": "DomesticElement[]",
    "templates": "string[]"
  },
  "TopLevel": {
    "categoryNews": "CategoryNews",
    "mainIndicator": "MainIndicator",
    "mainNews": "MainNews",
    "mostReadNews": "News",
    "notices": "Notices",
    "realtimeComments": "RealtimeComments",
    "recentInvestmentContents": "RecentInvestmentContents",
    "todayMarketNews": "News",
    "videos": "Videos"
  },
  "Videos": {
    "invenId": "string",
    "items": "VideosItem[]"
  },
  "VideosItem": {
    "body": "string",
    "categoryCode": "string",
    "cpCode": "string",
    "cpName": "string",
    "createDateTime": "string",
    "enabled": "boolean",
    "episode": "number",
    "id": "string",
    "playTime": "number",
    "publishDateTime": "string",
    "sectionCode": "string",
    "targetAge": "number",
    "targetNation": "string",
    "title": "string",
    "updateDateTime": "string",
    "vodImage": "string"
  }
};
